--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="usernameHint">Username</string>
     <string name="passwordHint">Password</string>
     <string name="signInDivider">OR CREATE A NEW ACCOUNT</string>
+	<string name="likesSubmit">Submit</string>
+	<string name="likesLabel">Likes</string>
+	<string name="dislikesLabel">Dislikes</string>
+	<string name="likesHint">List your likes.</string>
+	<string name="dislikesHint">List your dislikes.</string>
+	
 </resources>
